docs/log.txt
Error occurred when executing ZuellniPickScoreLoader:

HTTPSConnectionPool(host='huggingface.co', port=443): Max retries exceeded with url: /yuvalkirstain/PickScore_v1/resolve/main/tf_model.h5 (Caused by ConnectTimeoutError(, 'Connection to huggingface.co timed out. (connect timeout=10)'))

File "C:\Work\SD-ComfyUI\ComfyUI\execution.py", line 154, in recursive_execute
output_data, output_ui = get_output_data(obj, input_data_all)
File "C:\Work\SD-ComfyUI\ComfyUI\execution.py", line 84, in get_output_data
return_values = map_node_over_list(obj, input_data_all, obj.FUNCTION, allow_interrupt=True)
File "C:\Work\SD-ComfyUI\ComfyUI\execution.py", line 77, in map_node_over_list
results.append(getattr(obj, func)(**slice_dict(input_data_all, i)))
File "C:\Work\SD-ComfyUI\ComfyUI\custom_nodes\ComfyUI-PickScore-Nodes\pickscore.py", line 24, in load
model = AutoModel.from_pretrained(path, torch_dtype=dtype).eval().to(device)
File "C:\Work\SD-ComfyUI\python_embeded\lib\site-packages\transformers\models\auto\auto_factory.py", line 565, in from_pretrained
return model_class.from_pretrained(
File "C:\Work\SD-ComfyUI\python_embeded\lib\site-packages\transformers\modeling_utils.py", line 2949, in from_pretrained
if has_file(pretrained_model_name_or_path, TF2_WEIGHTS_NAME, **has_file_kwargs):
File "C:\Work\SD-ComfyUI\python_embeded\lib\site-packages\transformers\utils\hub.py", line 647, in has_file
r = requests.head(url, headers=headers, allow_redirects=False, proxies=proxies, timeout=10)
File "C:\Work\SD-ComfyUI\python_embeded\lib\site-packages\requests\api.py", line 100, in head
return request("head", url, **kwargs)
File "C:\Work\SD-ComfyUI\python_embeded\lib\site-packages\requests\api.py", line 59, in request
return session.request(method=method, url=url, **kwargs)
File "C:\Work\SD-ComfyUI\python_embeded\lib\site-packages\requests\sessions.py", line 587, in request
resp = self.send(prep, **send_kwargs)
File "C:\Work\SD-ComfyUI\python_embeded\lib\site-packages\requests\sessions.py", line 701, in send
r = adapter.send(request, **kwargs)
File "C:\Work\SD-ComfyUI\python_embeded\lib\site-packages\requests\adapters.py", line 553, in send
raise ConnectTimeout(e, request=request)

python_embeded\python.exe -m pip install turtle -i https://pypi.douban.com/simple/
WARNING: Ignoring invalid distribution -pencv-python (c:\work\sd-comfyui\python_embeded\lib\site-packages)
WARNING: Ignoring invalid distribution -rotobuf (c:\work\sd-comfyui\python_embeded\lib\site-packages)
Looking in indexes: https://pypi.douban.com/simple/
Collecting turtle
  Downloading https://mirrors.cloud.tencent.com/pypi/packages/ff/f0/21a42e9e424d24bdd0e509d5ed3c7dfb8f47d962d9c044dba903b0b4a26f/turtle-0.0.2.tar.gz (11 kB)
  Preparing metadata (setup.py) ... error
  error: subprocess-exited-with-error

  × python setup.py egg_info did not run successfully.
  │ exit code: 1
  ╰─> [7 lines of output]
      Traceback (most recent call last):
        File "<string>", line 2, in <module>
        File "<pip-setuptools-caller>", line 34, in <module>
        File "C:\Users\AI-Space002\AppData\Local\Temp\pip-install-kawqxhta\turtle_aa44016c48b641d68a687bbc1f446df6\setup.py", line 40
          except ValueError, ve:
                 ^^^^^^^^^^^^^^
      SyntaxError: multiple exception types must be parenthesized
      [end of output]

  note: This error originates from a subprocess, and is likely not a problem with pip.
error: metadata-generation-failed

× Encountered error while generating package metadata.
╰─> See above for output.

note: This is an issue with the package mentioned above, not pip.
hint: See above for details.

Error occurred when executing HaojihuiHPSv2ImageProcessor:

'Tensor' object has no attribute 'convert'

File "c:\Work\SD-ComfyUI\ComfyUI\execution.py", line 154, in recursive_execute
output_data, output_ui = get_output_data(obj, input_data_all)
File "c:\Work\SD-ComfyUI\ComfyUI\execution.py", line 84, in get_output_data
return_values = map_node_over_list(obj, input_data_all, obj.FUNCTION, allow_interrupt=True)
File "c:\Work\SD-ComfyUI\ComfyUI\execution.py", line 77, in map_node_over_list
results.append(getattr(obj, func)(**slice_dict(input_data_all, i)))
File "C:\Work\SD-ComfyUI\ComfyUI\custom_nodes\ComfyUI-HPSv2-Nodes\hpsv2.py", line 70, in process
processor(images).unsqueeze(0).to(device=device, non_blocking=True),
File "c:\Work\SD-ComfyUI\python_embeded\lib\site-packages\torchvision\transforms\transforms.py", line 95, in __call__
img = t(img)
File "c:\Work\SD-ComfyUI\python_embeded\lib\site-packages\hpsv2\src\open_clip\transform.py", line 56, in _convert_to_rgb_or_rgba
return image.convert('RGB')

Error occurred when executing HaojihuiHPSv2ImageProcessor:

'numpy.ndarray' object is not callable

File "c:\Work\SD-ComfyUI\ComfyUI\execution.py", line 154, in recursive_execute
output_data, output_ui = get_output_data(obj, input_data_all)
File "c:\Work\SD-ComfyUI\ComfyUI\execution.py", line 84, in get_output_data
return_values = map_node_over_list(obj, input_data_all, obj.FUNCTION, allow_interrupt=True)
File "c:\Work\SD-ComfyUI\ComfyUI\execution.py", line 77, in map_node_over_list
results.append(getattr(obj, func)(**slice_dict(input_data_all, i)))
File "C:\Work\SD-ComfyUI\ComfyUI\custom_nodes\ComfyUI-HPSv2-Nodes\hpsv2.py", line 71, in process
image = Image.fromarray(numpy())

CharacterFaceSwap            ComfyUI-WD14-Tagger
ComfyUI-AnimateDiff-Evolved  ComfyUI_ADV_CLIP_emb
ComfyUI-ExLlama              ComfyUI_experiments
ComfyUI-ExLlama-Nodes        ComfyUI_smZNodes
ComfyUI-HPSv2-Nodes          IPAdapter-ComfyUI
ComfyUI-Impact-Pack          comfy_clip_blip_node
ComfyUI-LaMA-Preprocessor    efficiency-nodes-comfyui-jags
ComfyUI-Manager              stability-ComfyUI-nodes
ComfyUI-PickScore-Nodes      was-node-suite-comfyui
ComfyUI-Portrait-Maker
comfyui_controlnet_aux
ComfyUI_IPAdapter_plus
